<?xml version="1.0"?>
<package>
  <name>cpr_platform_tutorials</name>
  <version>0.0.5</version>
  <description>Tutorial for CPR Platforms.</description>
  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <author email="jyang@clearpathrobotics.com">Joey Yang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosdoc_lite</build_depend>

  <export>
  </export>
</package>
